	      sure it does...
	      Should fix some problems with sessions that won't die or get's overwritten.
	      Not sure exactly what the problem is/was...

	GUI layout changes
	  - Rewrite the way users are listed in the left frame. The attribute 'cn' is
	    the most obvious to show and the way that's shown is also rewritten.
	    + If a user have more than two fields (space separated - 'Ulf Turbo Fredriksson'),
	      then the _last_ part is the lastname and all the others are first names...
	      If memory serves me correctly, this isn't true for arabic/chinese names, but...
	    + After 'cn' comes 'givenName' and 'sn' and after that comes 'gecos'. Last
	      chance is the 'user reference attribute' (whatever that might be - it MUST
	      exists however).
	  - When creating a 'forwarding account' there are two possibilities. Either with
	    local delivery (as well as forwarding) or no local delivery (i.e. only forwarding).
	    Allow this with two radio buttons in the 'Additional account properties' page -
	    'Copy to' (default) or 'Forward to'.
	    + Create objects with real home dirs...
	  - Include a 'NOT' option for user search. Describe what it does and how it works.

	Documentation changes
	Schema changes
	  - Because of the change in the way 'forwarding accounts' where used/created,
	    I lost all purpose of the 'virtualBaseHomeDir' global attribute/configuration!
	    Remove all references to it.
	  - Four new attributes for remote ezmlm lists added to the 'phpQLAdminGlobal'
	    object class:
	    ezmlmRemote				1.3.6.1.4.1.8767.3.2.1.21
	    ezmlmRemoteHost			1.3.6.1.4.1.8767.3.2.4.20
	    ezmlmRemoteUser			1.3.6.1.4.1.8767.3.2.4.21
	    ezmlmRemoteRetreiveScript		1.3.6.1.4.1.8767.3.2.2.21

	Misc changes
	  - Administration of mailinglists located on remote server (i.e. not on the same
	    host where phpQLAdmin is running). See WARNING.txt!

[all changelog for <2.3 branch have been removed for space reasons]